# Scene-Physics

./: .gitignore  .gitmodules  CLAUDE.md  README.md  likelihoods.md  plan.md  pyproject.toml  truth.py
docs/: SensorTiledCamera_Guide.md  acceleration_proposals.md  architecture.md  bug2_camera_transforms.md  composite_likelihood_proposal.md  gibbs_proposal.md  gpu_speedup_proposal.md  newton-state-copying.md  organization.md  parallel-6dof-changes.md  render_fidelity_agent.md
examples/: static.usd
examples/scenes/scene01/: sampling.py  simulation.py
examples/scenes/scene02/: sampling.py  simulation.py
examples/scenes/scene03/: load.py  load_scene.py  render_llvmpipe.py  simulate_scene.py  view_scene.py
my_docs/: architecture.md
resources/: fetch_assets.sh  heatmap.ipynb  review.ipynb
resources/camera_configs/: default_camera.json  p01_f03.json
resources/objects/objects/: object_1.mtl  object_10.mtl  object_11.mtl  object_12.mtl  object_13.mtl  object_14.mtl  object_15.mtl  object_16.mtl  object_17.mtl  object_18.mtl  object_19.mtl  object_2.mtl  object_20.mtl  object_3.mtl  object_5.mtl  object_6.mtl  object_7.mtl  object_8.mtl  object_9.mtl
review/: review1.md
src/Scene-Physics/: notebook.ipynb
src/scene_physics/: __init__.py  intrinsics.py  likelihoods.py
src/tasks/: ball_interaction.py  ball_physics_engine.py  ball_physics_vid.py  box_tetra.vtu  comparison.ipynb  dum.py  geb_cube.py  gen_mesh.py  gen_scene.ipynb  gen_sphere.py  generate_points.py  new_vid.py  point_cloud.py  points_falling.py  rounded_cube.vtu  sphere_tetra.vtk
tests/: test_camera_match.py  test_importance_sampling.py  test_integration.py  test_proposals.py  test_render_pipeline.py  test_sampling_invariants.py
(+137 files in other folders)
